refactor: consolidate CI workflows and use npm for frontend tests (#14)
* Refactor code structure for improved readability and maintainability

* fix: add missing package-lock.json for npm cache

* fix: use npm install directly to avoid npm ci sync issues

* fix: remove npm cache to avoid npm crash bug

* fix: switch to Yarn due to persistent npm crash bug

* fix: add npm debugging and multiple retry strategies

* fix: use npm run instead of npx for proper script execution

* fix: downgrade to stable npm 10.2.5 to avoid crash bug

* fix: remove tail to see full npm error logs

---------

Co-authored-by: Shahid Hussain <shahid.hussain@seb.se>

--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -25,28 +25,71 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Downgrade to stable npm version
+        run: npm install -g npm@10.2.5
 
-      - name: Install dependencies with Yarn
+      - name: Verify npm version
+        run: npm --version
+
+      - name: Clear npm cache
+        run: npm cache clean --force
+
+      - name: Verify npm cache
+        run: npm cache verify
+
+      - name: Install dependencies with npm (attempt 1 - verbose)
         working-directory: ./frontend/marketplace-web
-        run: yarn install --legacy-peer-deps
+        run: |
+          echo "=== Attempting npm install with verbose logging ==="
+          npm install --legacy-peer-deps --loglevel=verbose --no-progress --no-audit --no-fund
+        continue-on-error: true
+        id: npm-install-1
+
+      - name: Install dependencies with npm (attempt 2 - clean retry)
+        if: steps.npm-install-1.outcome == 'failure'
+        working-directory: ./frontend/marketplace-web
+        run: |
+          echo "=== First attempt failed, clearing cache and retrying ==="
+          npm cache clean --force
+          rm -rf node_modules package-lock.json 2>/dev/null || true
+          npm install --legacy-peer-deps --loglevel=verbose
+        continue-on-error: true
+        id: npm-install-2
+
+      - name: Install dependencies with npm (attempt 3 - different strategy)
+        if: steps.npm-install-2.outcome == 'failure'
+        working-directory: ./frontend/marketplace-web
+        run: |
+          echo "=== Second attempt failed, trying with prefer-offline ==="
+          npm install --legacy-peer-deps --prefer-offline --no-audit
+        continue-on-error: true
+        id: npm-install-3
+
+      - name: Verify installation
+        working-directory: ./frontend/marketplace-web
+        run: |
+          echo "=== Checking if node_modules exists ==="
+          ls -la node_modules/.bin/ | head -20
+          echo "=== Verifying next command ==="
+          npx next --version || echo "Next.js not found!"
+          echo "=== Verifying jest command ==="
+          npx jest --version || echo "Jest not found!"
 
       - name: Run linter
         working-directory: ./frontend/marketplace-web
-        run: yarn lint || echo "⚠️ Lint warnings present (non-blocking)"
+        run: npm run lint || echo "⚠️ Lint warnings present (non-blocking)"
         continue-on-error: true
 
       - name: Run tests
         working-directory: ./frontend/marketplace-web
-        run: yarn test -- --passWithNoTests --coverage
+        run: npm run test -- --passWithNoTests --coverage
         continue-on-error: true
 
       - name: Build application
         working-directory: ./frontend/marketplace-web
-        run: yarn build
+        run: npm run build
 
       - name: Type check
         working-directory: ./frontend/marketplace-web
-        run: yarn type-check
+        run: npm run type-check
         continue-on-error: true
