--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Use stable npm version
         run: npm install -g npm@10.2.5
 
+      - name: Reset npm registry to default
+        run: |
+          npm config delete registry || true
+          npm config set registry https://registry.npmjs.org/
+          npm config list
+
       - name: Install dependencies
         working-directory: ./frontend/marketplace-web
         run: npm install --legacy-peer-deps --no-audit --no-fund
