--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -32,7 +32,10 @@ jobs:
         run: |
           npm config delete registry || true
           npm config set registry https://registry.npmjs.org/
-          npm config list
+
+      - name: Remove old lockfile with organizational registry
+        working-directory: ./frontend/marketplace-web
+        run: rm -f package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend/marketplace-web
