--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -25,55 +25,21 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Downgrade to stable npm version
+      - name: Use stable npm version
         run: npm install -g npm@10.2.5
 
-      - name: Verify npm version
-        run: npm --version
-
-      - name: Clear npm cache
-        run: npm cache clean --force
-
-      - name: Verify npm cache
-        run: npm cache verify
-
-      - name: Install dependencies with npm (attempt 1 - verbose)
-        working-directory: ./frontend/marketplace-web
+      - name: Reset npm registry to default
         run: |
-          echo "=== Attempting npm install with verbose logging ==="
-          npm install --legacy-peer-deps --loglevel=verbose --no-progress --no-audit --no-fund
-        continue-on-error: true
-        id: npm-install-1
+          npm config delete registry || true
+          npm config set registry https://registry.npmjs.org/
 
-      - name: Install dependencies with npm (attempt 2 - clean retry)
-        if: steps.npm-install-1.outcome == 'failure'
+      - name: Remove old lockfile with organizational registry
         working-directory: ./frontend/marketplace-web
-        run: |
-          echo "=== First attempt failed, clearing cache and retrying ==="
-          npm cache clean --force
-          rm -rf node_modules package-lock.json 2>/dev/null || true
-          npm install --legacy-peer-deps --loglevel=verbose
-        continue-on-error: true
-        id: npm-install-2
+        run: rm -f package-lock.json
 
-      - name: Install dependencies with npm (attempt 3 - different strategy)
-        if: steps.npm-install-2.outcome == 'failure'
+      - name: Install dependencies
         working-directory: ./frontend/marketplace-web
-        run: |
-          echo "=== Second attempt failed, trying with prefer-offline ==="
-          npm install --legacy-peer-deps --prefer-offline --no-audit
-        continue-on-error: true
-        id: npm-install-3
-
-      - name: Verify installation
-        working-directory: ./frontend/marketplace-web
-        run: |
-          echo "=== Checking if node_modules exists ==="
-          ls -la node_modules/.bin/ | head -20
-          echo "=== Verifying next command ==="
-          npx next --version || echo "Next.js not found!"
-          echo "=== Verifying jest command ==="
-          npx jest --version || echo "Jest not found!"
+        run: npm install --legacy-peer-deps --no-audit --no-fund
 
       - name: Run linter
         working-directory: ./frontend/marketplace-web
