--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -209,6 +209,70 @@ http {
     }
 
     # ============================================================================
+    # API ROUTES - GO SERVICE (Messaging)
+    # ============================================================================
+    server {
+        listen 80;
+        server_name messaging.localhost;
+
+        # WebSocket endpoint
+        location /ws {
+            proxy_pass http://go_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400;
+            proxy_send_timeout 86400;
+        }
+
+        # Messaging API endpoints
+        location /api/messages/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://go_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Thread endpoints
+        location /api/threads/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://go_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Notifications endpoint
+        location /api/notifications/ {
+            limit_req zone=api burst=50 nodelay;
+            proxy_pass http://go_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Health check
+        location /health {
+            access_log off;
+            proxy_pass http://go_backend;
+        }
+    }
+
+    # ============================================================================
     # CORS Configuration Helper
     # ============================================================================
     map $http_origin $cors_header {
