--- a/config/env.production.template
+++ b/config/env.production.template
@@ -3,6 +3,16 @@
 # NEVER commit .env.production to version control
 
 # ==========================================================================
+# Docker Images (from GitHub Container Registry)
+# ==========================================================================
+# Format: ghcr.io/{github-username}/{repo-name}/{service-name}:tag
+# Replace OWNER and REPO with your actual GitHub username and repository name
+MARKETPLACE_IMAGE=ghcr.io/OWNER/REPO/marketplace-service:latest
+MESSAGING_IMAGE=ghcr.io/OWNER/REPO/messaging-service:latest
+ADMIN_DASHBOARD_IMAGE=ghcr.io/OWNER/REPO/admin-dashboard:latest
+MARKETPLACE_WEB_IMAGE=ghcr.io/OWNER/REPO/marketplace-web:latest
+
+# ==========================================================================
 # Database Credentials
 # ==========================================================================
 DB_USER=marketplace_user
