--- a/.github/workflows/master-pipeline.yml
+++ b/.github/workflows/master-pipeline.yml
@@ -43,47 +43,15 @@ jobs:
               - 'frontend/marketplace-web/**'
 
   # ============================================
-  # Trigger Individual Service Pipelines
-  # ============================================
-  trigger-marketplace-service:
-    name: ☕ Java Marketplace Service
-    needs: detect-changes
-    if: needs.detect-changes.outputs.marketplace-service == 'true'
-    uses: ./.github/workflows/marketplace-service-ci-cd.yml
-    secrets: inherit
-
-  trigger-messaging-service:
-    name: 🔵 Go Messaging Service
-    needs: detect-changes
-    if: needs.detect-changes.outputs.messaging-service == 'true'
-    uses: ./.github/workflows/messaging-service-ci-cd.yml
-    secrets: inherit
-
-  trigger-admin-dashboard:
-    name: 👨‍💼 Admin Dashboard
-    needs: detect-changes
-    if: needs.detect-changes.outputs.admin-dashboard == 'true'
-    uses: ./.github/workflows/admin-dashboard-ci-cd.yml
-    secrets: inherit
-
-  trigger-marketplace-web:
-    name: 🌐 Marketplace Web
-    needs: detect-changes
-    if: needs.detect-changes.outputs.marketplace-web == 'true'
-    uses: ./.github/workflows/marketplace-web-ci-cd.yml
-    secrets: inherit
-
-  # ============================================
   # E2E Tests (Only if backend services changed)
   # ============================================
   e2e-tests:
     name: 🎯 End-to-End Tests
     runs-on: ubuntu-latest
-    needs: [detect-changes, trigger-marketplace-service, trigger-messaging-service]
+    needs: detect-changes
     if: |
-      always() &&
-      (needs.detect-changes.outputs.marketplace-service == 'true' || 
-       needs.detect-changes.outputs.messaging-service == 'true')
+      needs.detect-changes.outputs.marketplace-service == 'true' || 
+      needs.detect-changes.outputs.messaging-service == 'true'
     
     services:
       postgres:
