fix: Use npx for ESLint in CI/CD workflow
- Replace 'npm run lint:ci' with 'npx eslint' to ensure it uses installed package
- Fixes eslint command not found error

--- a/.github/workflows/marketplace-web-ci-cd.yml
+++ b/.github/workflows/marketplace-web-ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run ESLint
         working-directory: ./frontend/marketplace-web
-        run: npm run lint:ci
+        run: npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 50
 
       - name: Check TypeScript types
         working-directory: ./frontend/marketplace-web
