--- a/.github/workflows/admin-dashboard-ci-cd.yml
+++ b/.github/workflows/admin-dashboard-ci-cd.yml
@@ -33,12 +33,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/admin-dashboard/package-lock.json
+
+      - name: Use stable npm version
+        run: npm install -g npm@10.2.5
+
+      - name: Reset npm registry to default
+        run: |
+          npm config delete registry || true
+          npm config set registry https://registry.npmjs.org/
+
+      - name: Remove old lockfile
+        working-directory: ./frontend/admin-dashboard
+        run: rm -f package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend/admin-dashboard
-        run: npm ci
+        run: npm install --legacy-peer-deps --no-audit --no-fund
 
       - name: Run ESLint
         working-directory: ./frontend/admin-dashboard
@@ -65,12 +75,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/admin-dashboard/package-lock.json
+
+      - name: Remove old lockfile
+        working-directory: ./frontend/admin-dashboard
+        run: rm -f package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend/admin-dashboard
-        run: npm ci
+        run: npm install --legacy-peer-deps --no-audit --no-fund
 
       - name: Build application
         working-directory: ./frontend/admin-dashboard
@@ -101,12 +113,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/admin-dashboard/package-lock.json
+
+      - name: Remove old lockfile
+        working-directory: ./frontend/admin-dashboard
+        run: rm -f package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend/admin-dashboard
-        run: npm ci
+        run: npm install --legacy-peer-deps --no-audit --no-fund
 
       - name: Run unit tests
         working-directory: ./frontend/admin-dashboard
