--- a/.github/workflows/marketplace-web-ci-cd.yml
+++ b/.github/workflows/marketplace-web-ci-cd.yml
@@ -289,6 +289,7 @@ jobs:
     name: 🚦 Lighthouse Performance
     runs-on: ubuntu-latest
     needs: build
+    continue-on-error: true
     if: github.event_name == 'pull_request'
     
     steps:
