fix: Fix workflow warnings and errors, add error handling and improve type safety
- Fix ESLint 'Unexpected any' warnings by replacing any types with proper TypeScript interfaces
- Add error checking for SetReadDeadline, SetWriteDeadline, RefreshPresence, Write in Go WebSocket client
- Add if-no-files-found: ignore to all artifact uploads to handle missing test/coverage directories
- Fix json.Unmarshal error handling in handleMessage
- Make Lighthouse artifact upload non-blocking to prevent test failures
- Fixes Admin Dashboard coverage upload warning
- Fixes Marketplace Web build artifact upload warning
- Fixes Marketplace Service test report upload warnings

--- a/.github/workflows/admin-dashboard-ci-cd.yml
+++ b/.github/workflows/admin-dashboard-ci-cd.yml
@@ -134,6 +134,7 @@ jobs:
           name: test-results
           path: frontend/admin-dashboard/coverage/
           retention-days: 7
+          if-no-files-found: ignore
 
   # ============================================
   # Stage 4: Build Docker Image (Optional)
