--- a/.github/workflows/marketplace-web-ci-cd.yml
+++ b/.github/workflows/marketplace-web-ci-cd.yml
@@ -100,7 +100,8 @@ jobs:
           path: |
             frontend/marketplace-web/.next/
             frontend/marketplace-web/public/
-          retention-days: 7          if-no-files-found: ignore
+          retention-days: 7
+          if-no-files-found: ignore
   # ============================================
   # Stage 3: Unit Tests
   # ============================================
