Fix Docker build failures and PWA PNG icon requirement
Docker Build Fixes:
- Replace 'npm ci' with 'npm install --legacy-peer-deps' in both workflows
- Remove old package-lock.json before install to prevent sync errors
- Fixes 'picomatch@2.3.1 does not satisfy picomatch@4.0.3' error
- Applies to: Marketplace Web and Admin Dashboard CI/CD workflows

PWA Enhancements:
- Create PNG icon files (512x512 and 192x192) for PWA manifest
- PNG icons satisfy Lighthouse PWA requirement (minimum 512px)
- PNG icons support maskable icons for custom splash screens
- Add screenshots array to manifest for better PWA presentation
- Update manifest.json to reference PNG icons
- Update layout.tsx metadata to reference PNG apple icon

Expected Impact:
- Docker builds will now succeed for both frontend services
- PWA score improvements in Lighthouse report
- Installable PWA with proper splash screen support
- Better mobile device integration

--- a/.github/workflows/marketplace-web-ci-cd.yml
+++ b/.github/workflows/marketplace-web-ci-cd.yml
@@ -196,7 +196,8 @@ jobs:
 
           # Copy package files
           COPY package*.json ./
-          RUN npm ci
+          # Remove old lockfile and install with legacy-peer-deps for compatibility
+          RUN rm -f package-lock.json && npm install --legacy-peer-deps --no-audit --no-fund
 
           # Copy source code
           COPY . .
