Refactor CI/CD pipeline configurations and workflows for Marketplace services
- Updated filenames in documentation and pipeline configurations to reflect new naming conventions:
  - Marketplace Service: `marketplace-service-ci-cd.yml` to `marketplace-service.yml`
  - Messaging Service: `messaging-service-ci-cd.yml` to `marketplace-messaging-service.yml`
  - Marketplace Web: `marketplace-web-ci-cd.yml` to `marketplace-web.yml`

- Enhanced CI/CD documentation to provide clarity on pipeline purposes and configurations.
- Implemented new GitHub Actions workflows for Marketplace Messaging Service and Marketplace Service.
- Improved security scanning and artifact management in CI/CD processes.
- Added detailed summaries for CI/CD execution results in the summary jobs.

--- a/.github/workflows/marketplace-messaging-service.yml
+++ b/.github/workflows/marketplace-messaging-service.yml
@@ -1,16 +1,16 @@
-name: Messaging Service CI/CD
+name: Marketplace Messaging Service
 
 on:
   push:
     branches: [main, develop, phase2CICDUpdates]
     paths:
       - 'services/messaging-service/**'
-      - '.github/workflows/messaging-service-ci-cd.yml'
+      - '.github/workflows/marketplace-messaging-service.yml'
   pull_request:
     branches: [main, develop]
     paths:
       - 'services/messaging-service/**'
-      - '.github/workflows/messaging-service-ci-cd.yml'
+      - '.github/workflows/marketplace-messaging-service.yml'
 
 env:
   REGISTRY: ghcr.io
@@ -326,7 +326,7 @@ jobs:
     steps:
       - name: Display summary
         run: |
-          echo "## 🎉 Messaging Service CI/CD Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## 🎉 Marketplace Messaging Service Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Stage | Status |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
